fix: mobile menu social media wrap

--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ img {
 }
 .page-header__social-media {
   position: fixed;
-  bottom: 64px;
+  bottom: 48px;
   display: flex;
   margin-top: 64px;
   font-weight: 500;
@@ -1019,6 +1019,7 @@ img {
   transform: translate(-50%, -50%);
   z-index: 999;
   width: 450px;
+  max-width: 100vw;
   height: 609px;
   padding: 40px;
   border-radius: 4px;
