--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -132,7 +132,7 @@
 
   &__social-media {
     position: fixed;
-    bottom: 64px;
+    bottom: 48px;
 
     display: flex;
 
