--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,6 +31,7 @@
   z-index: 999;
 
   width: 450px;
+  max-width: 100vw;
   height: 609px;
   padding: 40px;
 
